高可用注册中心

--- a/springcloud_eureka_client/src/main/resources/application.properties
+++ b/springcloud_eureka_client/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=hello-service
 
+# 注册单节点的注册中心
 eureka.client.service-url.defaultZone=http://localhost:1111/eureka/
+
+# 注册多节点的注册中心
+#eureka.client.service-url.defaultZone=http://peer1:1111/eureka/,http://peer2:1112/eureka/
+
+#强制使用 IP 地址的形式来注册服务的地址，而不是主机名
+#eureka.instance.prefer-ip-address=true
