--- a/springcloud_eureka_server/src/main/resources/application.properties
+++ b/springcloud_eureka_server/src/main/resources/application.properties
@@ -5,5 +5,6 @@ eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 # 是否定期更新服务清单
 eureka.client.fetch-registry=false
+# 定服务注册中心的地址（提供服务注册者注册服务的地址）
 eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
 
