--- a/springcloud_eureka_client/src/main/resources/application.properties
+++ b/springcloud_eureka_client/src/main/resources/application.properties
@@ -8,3 +8,6 @@ eureka.client.service-url.defaultZone=http://localhost:1111/eureka/
 
 #强制使用 IP 地址的形式来注册服务的地址，而不是主机名
 #eureka.instance.prefer-ip-address=true
+
+#启用/health健康检测
+eureka.client.healthcheck.enabled=true
